Fix the player position that was resuming when starting a new game by implementing some starting game parameters.

--- a/assets/JSON/volcano-easy-questions.JSON
+++ b/assets/JSON/volcano-easy-questions.JSON
@@ -11,7 +11,7 @@
     "optionOne": "Mix of molten rocks and gas.",
     "optionTwo": "Underground explosion.",
     "optionThree": "A layer of the Earth.",
-    "correctAnswer": "Underground molten rocks."
+    "correctAnswer": "Mix of molten rocks and gas."
   },
   {
     "question": "When magma reach the surface, how is it called?",
