Add the JSON files that host the questions for the labyrinth.

--- a/assets/JSON/easy-questions/volcano-easy-questions.JSON
+++ b/assets/JSON/easy-questions/volcano-easy-questions.JSON
@@ -7,7 +7,7 @@
     "correctAnswer": "An opening through the Earth crust."
   },
   {
-    "question": "What is a magma?",
+    "question": "What is magma?",
     "optionOne": "Mix of molten rocks and gas.",
     "optionTwo": "Underground explosion.",
     "optionThree": "A layer of the Earth.",
