Correct syntax in an answer.

--- a/assets/JSON/easy-questions/earth-easy-questions.JSON
+++ b/assets/JSON/easy-questions/earth-easy-questions.JSON
@@ -148,7 +148,7 @@
   },
   {
     "question": "About 25% of what comes from the Jungle?",
-    "optionOne": "Medicine.",
+    "optionOne": "Medicines.",
     "optionTwo": "Wood.",
     "optionThree": "Water.",
     "correctAnswer": "Medicines."
